--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -66,27 +66,34 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Genres.cs" />
     <Compile Include="DAL\SQLiteHelper.cs" />
-    <Compile Include="DAL\Film.cs" />
-    <Compile Include="DAL\Start.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DAL\Start.Designer.cs">
-      <DependentUpon>Start.cs</DependentUpon>
-    </Compile>
+    <Compile Include="DAL\Films.cs" />
     <Compile Include="Film.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Film.Designer.cs">
       <DependentUpon>Film.cs</DependentUpon>
     </Compile>
+    <Compile Include="Genre.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Genre.Designer.cs">
+      <DependentUpon>Genre.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="DAL\Start.resx">
+    <Compile Include="Start.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Start.Designer.cs">
       <DependentUpon>Start.cs</DependentUpon>
-    </EmbeddedResource>
+    </Compile>
     <EmbeddedResource Include="Film.resx">
       <DependentUpon>Film.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Genre.resx">
+      <DependentUpon>Genre.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -98,6 +105,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Start.resx">
+      <DependentUpon>Start.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="db.sqlite">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -117,6 +127,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\68.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Film\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
