--- a/Interface/Interface.csproj
+++ b/Interface/Interface.csproj
@@ -72,6 +72,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DAL\Actors.cs" />
+    <Compile Include="DAL\Directors.cs" />
     <Compile Include="DAL\Genres.cs" />
     <Compile Include="DAL\SQLiteHelper.cs" />
     <Compile Include="DAL\Films.cs" />
@@ -81,24 +83,24 @@
     <Compile Include="Film\Film.Designer.cs">
       <DependentUpon>Film.cs</DependentUpon>
     </Compile>
-    <Compile Include="Genre.cs">
+    <Compile Include="Genre\Genre.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Genre.Designer.cs">
+    <Compile Include="Genre\Genre.Designer.cs">
       <DependentUpon>Genre.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Start.cs">
+    <Compile Include="Start\Start.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Start.Designer.cs">
+    <Compile Include="Start\Start.Designer.cs">
       <DependentUpon>Start.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Film\Film.resx">
       <DependentUpon>Film.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Genre.resx">
+    <EmbeddedResource Include="Genre\Genre.resx">
       <DependentUpon>Genre.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -111,7 +113,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="Start.resx">
+    <EmbeddedResource Include="Start\Start.resx">
       <DependentUpon>Start.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="db.sqlite">
